Updating cart to be position fixed and to hide the checkout button when not showing so the simulator will work correctly.

--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -1,5 +1,5 @@
 .cart {
-    position: absolute;
+    position: fixed;
     height: 100vh;
     width: 0;
     background-color: #EEEEEE;
